--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -179,10 +179,12 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\shader_practice_SimpleTestScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Block.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Constant.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_EffectManagerNode.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_EffectView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockViewNode.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_test_BlockViewNodeScene.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_test_EffectManagerNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_test_EffectViewScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_test_StageViewNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_ContactScene.cpp" />
@@ -413,10 +415,12 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\shader_practice_RootScene.h" />
     <ClInclude Include="..\Classes\shader_practice_SimpleTestScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Block.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_EffectManagerNode.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_EffectView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockViewNode.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_test_BlockViewNodeScene.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_test_EffectManagerNodeScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_test_EffectViewScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_test_StageViewNodeScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_ContactScene.h" />
