--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -322,6 +322,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_game_StageView.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_label_ttf_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_label_ttf_ETCScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_ScheduleScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sound_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_tool_TerrainEditHelper.cpp" />
@@ -567,6 +568,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_game_StageView.h" />
     <ClInclude Include="..\Classes\step_typetype_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_typetype_label_ttf_BasicScene.h" />
+    <ClInclude Include="..\Classes\step_typetype_label_ttf_ETCScene.h" />
     <ClInclude Include="..\Classes\step_typetype_ScheduleScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sound_BasicScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_tool_TerrainEditHelper.h" />
