--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -320,6 +320,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_game_test_LetterViewNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_test_StageScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageViewNode.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_game_test_StageViewNodeScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_label_ttf_AlignScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_label_ttf_ETCScene.cpp" />
@@ -566,6 +567,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_game_test_LetterViewNodeScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_test_StageScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageViewNode.h" />
+    <ClInclude Include="..\Classes\step_typetype_game_test_StageViewNodeScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_typetype_label_ttf_AlignScene.h" />
     <ClInclude Include="..\Classes\step_typetype_label_ttf_ETCScene.h" />
