--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -909,6 +909,9 @@
     <ClCompile Include="..\Classes\step_typetype_game_StageViewNode.cpp">
       <Filter>src\scene\step_01_typetype\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_typetype_game_test_StageViewNodeScene.cpp">
+      <Filter>src\scene\step_01_typetype\game_test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1642,6 +1645,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_typetype_game_StageViewNode.h">
       <Filter>src\scene\step_01_typetype\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_typetype_game_test_StageViewNodeScene.h">
+      <Filter>src\scene\step_01_typetype\game_test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
