add template : cpg - Grid

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1673,6 +1673,9 @@
     <ClInclude Include="..\Classes\cpg_Point.h">
       <Filter>src\cpg</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\cpg_Grid.h">
+      <Filter>src\cpg</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
