--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -152,6 +152,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   <ItemGroup>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Constant.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.cpp" />
@@ -393,6 +394,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   <ItemGroup>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Constant.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.h" />
