--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -151,6 +151,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Constant.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
@@ -393,6 +395,8 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Constant.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
