--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -726,9 +726,6 @@
     <ClCompile Include="..\Classes\step_defender_tool_TileSheetNode.cpp">
       <Filter>src\scene\step_07_defender\tool</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\step_defender_game_TileSheetUtility.cpp">
-      <Filter>src\scene\step_07_defender\game</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.cpp">
       <Filter>src\scene\step_07_defender\tool_test</Filter>
     </ClCompile>
@@ -938,6 +935,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp">
       <Filter>src\scene\step99\algorithm_practice</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\cpg_TileSheetUtility.cpp">
+      <Filter>src\cpg</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1490,9 +1490,6 @@
     <ClInclude Include="..\Classes\step_defender_game_Constant.h">
       <Filter>src\scene\step_07_defender\game</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\step_defender_game_TileSheetUtility.h">
-      <Filter>src\scene\step_07_defender\game</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\step_defender_tool_test_TileSheetNodeScene.h">
       <Filter>src\scene\step_07_defender\tool_test</Filter>
     </ClInclude>
@@ -1705,6 +1702,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h">
       <Filter>src\scene\step99\algorithm_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_TileSheetUtility.h">
+      <Filter>src\cpg</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
