--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -202,14 +202,14 @@
     <Filter Include="src\scene\step_02_flipflip\sprite_frame">
       <UniqueIdentifier>{a70260a5-6b93-4f29-b053-f8624067d4d2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\scene\step99\algorithm_practice">
-      <UniqueIdentifier>{64c6c9c5-7f6d-461a-b00e-3e73d682654c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\scene\tool_practice">
       <UniqueIdentifier>{c7283c4e-210a-420f-a875-42d985335828}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\scene\step_01_typetype\node">
       <UniqueIdentifier>{0a56a1e2-b95b-458a-9af0-f346ee5db38e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\scene\algorithm_practice">
+      <UniqueIdentifier>{64c6c9c5-7f6d-461a-b00e-3e73d682654c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -805,7 +805,7 @@
       <Filter>src\cpg</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\input_practice_GamePadTestScene.cpp">
       <Filter>src\scene\input_practice</Filter>
@@ -919,31 +919,31 @@
       <Filter>src\scene\step_01_typetype\game</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Constant.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_TileSheetConfiguration.cpp">
       <Filter>src\cpg</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_TileSheetUtility.cpp">
       <Filter>src\cpg</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.cpp">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_Direction4.cpp">
       <Filter>src\cpg</Filter>
@@ -1578,7 +1578,7 @@
       <Filter>src\cpg</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\input_practice_GamePadTestScene.h">
       <Filter>src\scene\input_practice</Filter>
@@ -1695,31 +1695,31 @@
       <Filter>src\cpg</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Constant.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_TileSheetConfiguration.h">
       <Filter>src\cpg</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_TileSheetUtility.h">
       <Filter>src\cpg</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.h">
-      <Filter>src\scene\step99\algorithm_practice</Filter>
+      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_Direction4.h">
       <Filter>src\cpg</Filter>
