--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -211,6 +211,9 @@
     <Filter Include="src\scene\algorithm_practice">
       <UniqueIdentifier>{64c6c9c5-7f6d-461a-b00e-3e73d682654c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\algorithm_practice\folldfill">
+      <UniqueIdentifier>{73d794a7-4179-4bd6-acb4-30926b93b29a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -918,35 +921,35 @@
     <ClCompile Include="..\Classes\step_typetype_game_Constant.cpp">
       <Filter>src\scene\step_01_typetype\game</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_Constant.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\cpg_TileSheetConfiguration.cpp">
       <Filter>src\cpg</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\cpg_TileSheetUtility.cpp">
       <Filter>src\cpg</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.cpp">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\cpg_Direction4.cpp">
       <Filter>src\cpg</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_Constant.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1694,35 +1697,35 @@
     <ClInclude Include="..\Classes\cpg_Grid.h">
       <Filter>src\cpg</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_Constant.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\cpg_TileSheetConfiguration.h">
       <Filter>src\cpg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h">
-      <Filter>src\scene\algorithm_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_TileSheetUtility.h">
       <Filter>src\cpg</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.h">
-      <Filter>src\scene\algorithm_practice</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\cpg_Direction4.h">
       <Filter>src\cpg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_Constant.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionCellScene.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNode.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h">
+      <Filter>src\scene\algorithm_practice\folldfill</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
