--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -156,6 +156,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_EditorNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.cpp" />
+    <ClCompile Include="..\Classes\algorithm_practice_floodfill_ProcessorNode.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_RootScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_floodfill_TestScene.cpp" />
     <ClCompile Include="..\Classes\algorithm_practice_RootScene.cpp" />
@@ -404,6 +405,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_DirectionMapNodeScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_EditorNode.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_Grid4TileMap.h" />
+    <ClInclude Include="..\Classes\algorithm_practice_floodfill_ProcessorNode.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_RootScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_floodfill_TestScene.h" />
     <ClInclude Include="..\Classes\algorithm_practice_RootScene.h" />
