add scene : graph_practice - SineScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -179,6 +179,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\graph_practice_Collection06Scene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_GraphViewNode.cpp" />
     <ClCompile Include="..\Classes\graph_practice_RootScene.cpp" />
+    <ClCompile Include="..\Classes\graph_practice_SineScene.cpp" />
     <ClCompile Include="..\Classes\helper_Win32DirectoryOpen.cpp" />
     <ClCompile Include="..\Classes\input_practice_GamePadTestScene.cpp" />
     <ClCompile Include="..\Classes\input_practice_RootScene.cpp" />
@@ -431,6 +432,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\graph_practice_Collection06Scene.h" />
     <ClInclude Include="..\Classes\graph_practice_GraphViewNode.h" />
     <ClInclude Include="..\Classes\graph_practice_RootScene.h" />
+    <ClInclude Include="..\Classes\graph_practice_SineScene.h" />
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h" />
     <ClInclude Include="..\Classes\helper_SceneMover.h" />
     <ClInclude Include="..\Classes\helper_Win32DirectoryOpen.h" />
