--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\graph_practice_Collection05Scene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_Collection06Scene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_GraphAndNameNode.cpp" />
+    <ClCompile Include="..\Classes\graph_practice_test_GraphViewNodeScene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_SineScene.cpp" />
     <ClCompile Include="..\Classes\helper_Win32DirectoryOpen.cpp" />
@@ -431,6 +432,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\graph_practice_Collection05Scene.h" />
     <ClInclude Include="..\Classes\graph_practice_Collection06Scene.h" />
     <ClInclude Include="..\Classes\graph_practice_GraphAndNameNode.h" />
+    <ClInclude Include="..\Classes\graph_practice_test_GraphViewNodeScene.h" />
     <ClInclude Include="..\Classes\graph_practice_RootScene.h" />
     <ClInclude Include="..\Classes\graph_practice_SineScene.h" />
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h" />
