--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -214,6 +214,9 @@
     <Filter Include="src\scene\algorithm_practice\floodfill">
       <UniqueIdentifier>{73d794a7-4179-4bd6-acb4-30926b93b29a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step99\cocos_research">
+      <UniqueIdentifier>{58c98b4e-9e2b-4c01-b04b-cc655fd03f67}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -971,6 +974,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\graph_practice_TangentScene.cpp">
       <Filter>src\scene\graph_practice</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\cocos_research_action_SoundActionScene.cpp">
+      <Filter>src\scene\step99\cocos_research</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1768,6 +1774,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\graph_practice_TangentScene.h">
       <Filter>src\scene\graph_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cocos_research_action_SoundActionScene.h">
+      <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
