--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -978,6 +978,9 @@
     <ClCompile Include="..\Classes\cocos_research_action_SoundActionScene.cpp">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cocos_research_action_SpriteFrameActionScene.cpp">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1776,6 +1779,9 @@
       <Filter>src\scene\graph_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cocos_research_action_SoundActionScene.h">
+      <Filter>src\scene\step99\cocos_research</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cocos_research_action_SpriteFrameActionScene.h">
       <Filter>src\scene\step99\cocos_research</Filter>
     </ClInclude>
   </ItemGroup>
